Start frontend in vue
